@@ -344,10 +344,7 @@ static NSColor	*shadowCol;
 		    @"Attempt to use nil as string value");
     }
 
-  if (_cell.type != NSTextCellType)
-    {
-      [self setType: NSTextCellType];
-    }
+  _cell.type = NSTextCellType;
   _cell.contents_is_attributed_string = NO;
 
   if (_formatter == nil)
@@ -742,13 +739,13 @@ static NSColor	*shadowCol;
 
 - (void) setFont: (NSFont*)fontObject
 {
-  if (_cell.type != NSTextCellType)
-    {
-      [self setType: NSTextCellType];
-    }
-
   // This does not have any influence on attributed strings
   ASSIGN (_font, fontObject);
+
+  if (_cell.type != NSTextCellType)
+    {
+      _cell.type = NSTextCellType;
+    }
 }
 
 - (void) setSelectable: (BOOL)flag
@@ -973,10 +970,7 @@ static NSColor	*shadowCol;
 		NSInvalidArgumentException);
     }
   
-  if (_cell.type != NSImageCellType)
-    {
-      [self setType: NSImageCellType];
-    }
+  _cell.type = NSImageCellType;    
   
   ASSIGN (_cell_image, anImage);
 }
